# subwhisperer

./: .gitignore  Import SRT into Adobe After Effects.jsx  README.md  example.json  main.py  pyproject.toml  requirements.txt  utils.py  vsub.py
src/subwhisperer/: cli.py
src/subwhisperer/core/: __init__.py
subwhisperer.py/: cli.py  engine.py
subwhisperer.py/core/: file_utility.py  transcription_processor.py  whisper_transcriber.py
tests/: smoke_test_process_video.py  test_process_video.py
utils/: audio_extractor.py  file_utility.py  intelligent_splitter.py  segment_detector.py  text_merger.py  transcription_processor.py  whisper_transcriber.py
video_subtitler/: __init__.py  audio_extractor.py  file_utility.py  segment_detector.py  speech-to-text.py  transcription_processor.py  video_subtitler.py  whisper_transcriber.py
vsub/: __init__.py  audio_extractor.py  segment_detector.py  speech-to-text.py  text_merger.py  transcription_processor.py  vsub.py
